--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.0",
+    "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.2.0",
+    "node-fetch": "^2.6.1",
     "nodemailer": "^6.4.15",
     "puppeteer": "^5.4.1"
   }
